Layout vertical-stretch fixes

--- a/src/style/layout/layout.less
+++ b/src/style/layout/layout.less
@@ -73,4 +73,5 @@ html, body {
 .layout-vertical-offset {
 	.debugborders();
 	margin-top: (@programbarWidth + 11px);
+	height: calc(100% - (@programbarWidth + 11px));
 }
